# graph-compare-platform

./: .gitignore  README.md  使用说明书.md  开发文档.md  技术实现说明书.md
backend/: database.py  main.py  models.py  pyproject.toml  schemas.py
backend/routers/: diff.py  images.py  report.py  tasks.py
backend/services/: diff_service.py  image_service.py  oss_service.py  report_service.py  task_service.py
backend/tests/: conftest.py  test_algo.py  test_diff.py  test_images.py  test_tasks.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  diffApi.ts  imageApi.ts  taskApi.ts
frontend/src/components/: Layout.tsx  TaskStatusBadge.tsx
frontend/src/pages/: CompareListPage.tsx  CompareViewPage.tsx  TaskDetailPage.tsx  TaskListPage.tsx
frontend/src/store/: compareStore.ts  taskStore.ts
frontend/src/types/: index.ts
scripts/: gen_thumbs.py  install.sh  restart.sh  start.sh  stop.sh
